# hackaton-minesparis-python

./: README.md  pyproject.toml
src/hackaton_minesparis_python/: Visual.py  Visual_parser.py  __init__.py  barycentre.py  code-plateforme.py  distance_proj_V2.py  distances_proj.py  dynamic.py  goo.py  main.py  math_goo.py  visualisation.py  world.py
